--- a/Mathematics_Formulary/sections/arithmetic.tex
+++ b/Mathematics_Formulary/sections/arithmetic.tex
@@ -29,7 +29,7 @@ Exponentiation is a mathematical operation, written as $b^n$, involving two numb
 
 Properties:
 \[
-a^0=1 \ \ , \ \ a^{x+y}=a^xa^y \ , \ \ a^{x-y}=\frac{a^x}{a^y} \ , \ \ (a^x)^y=a^{xy} \ , \ \ (ab)^n = a^nb^n \ \ , \ \ a^{\frac{x}{y}}=\sqrt[y]{a^x}
+a^0=1 \ \ , \ \ a^{x+y}=a^xa^y \ \ , \ \ a^{x-y}=\frac{a^x}{a^y} \ \ , \ \ (a^x)^y=a^{xy} \ \ , \ \ (ab)^n = a^nb^n \ \ , \ \ a^{\frac{x}{y}}=\sqrt[y]{a^x}
 \]
 
 \section{Logarithm}
@@ -37,19 +37,16 @@ a^0=1 \ \ , \ \ a^{x+y}=a^xa^y \ , \ \ a^{x-y}=\frac{a^x}{a^y} \ , \ \ (a^x)^y=a
 base $e$ one writes $\ln(x)$.
 
 {\bf Rules}:
-	
-	$a^{log_a(y)}=y $
-	
-	$\log_a(a^x)=x$
-	
-	$\log_a(1)=0$
-	
-	$\log_a(x^y)=y\log_a(x) \ \forall x>0 \ \forall y \in \mathbb{R}$
-	
-	$\log_a(x)=\frac{1}{\log_x(a)}$
-	
-	$\log_a(\frac{1}{x})=-\log_a(x)$
-	
-	$\log_a(xy) = \log_a(x)+\log_a(y) \  \forall x,y>0$
-	
-	$\log_a(x/y) = \log_a(x)-\log_a(y) \ \forall x,y>0$.
+
+\begin{tabular}{ l l }
+$ \displaystyle \log_a(1)=0 $ &
+$ \displaystyle a^{log_a(y)}=y $ \\
+$ \displaystyle \log_a(a^x)=x $ &
+$ \displaystyle \log_a(x^y)=y\log_a(x) \ \forall x>0 \ \forall y \in \mathbb{R} $ \\
+$ \displaystyle \log_a(x)=\frac{1}{\log_x(a)} $ &
+$ \displaystyle \log_a\left(1/x\right)=-\log_a(x) $ \\
+$ \displaystyle \log_a(xy) = \log_a(x)+\log_a(y) \  \forall x,y>0 $ &
+$ \displaystyle \log_a(x/y) = \log_a(x)-\log_a(y) \ \forall x,y>0 $
+\end{tabular}
+
+
