--- a/Mathematics_Formulary/formulario.tex
+++ b/Mathematics_Formulary/formulario.tex
@@ -7,7 +7,8 @@
     \usepackage{amssymb}
 	\usepackage{hyperref}
 	\usepackage{fancyhdr}
-	
+	\usepackage{tabularx}
+
 	\hypersetup{
 		colorlinks=true,
 		linkcolor=blue,
