Add some common limits

--- a/Mathematics_Formulary/sections/calculus.tex
+++ b/Mathematics_Formulary/sections/calculus.tex
@@ -55,24 +55,25 @@ $ \displaystyle \lim_{x\rightarrow\pm\infty}\frac{P(x)}{Q(x)}=\lim_{x\rightarrow
 \end{cases} $
 
 \subsubsection{Trigonometric functions}
-\begin{tabular}{ l l }
+\begin{tabularx}{\textwidth}{ X X X }
 
 $ \displaystyle \lim_{x\rightarrow0}\frac{\sin(x)}{x}=1 $ &
-$ \displaystyle \lim_{x\rightarrow0}\frac{\sin(\alpha x)}{\beta x}=\frac{\alpha}{\beta} $ \\ [1.7ex]
+$ \displaystyle \lim_{x\rightarrow0}\frac{\sin(\alpha x)}{\beta x}=\frac{\alpha}{\beta} $ &
+$ \displaystyle  \lim_{x\rightarrow0}\frac{\arcsin(x)}{x}=1 $\\ [1.7ex]
 
 $ \displaystyle \lim_{x\rightarrow0}\frac{1-\cos(x)}{x}=0 $ &
 $ \displaystyle \lim_{x\rightarrow0}\frac{1-\cos(x)}{x^2}=\frac{1}{2} $ \\ [1.7ex]
 
 $ \displaystyle \lim_{x\rightarrow0}\frac{\tan(x)}{x}=1 $ &
-$ \displaystyle  \lim_{x\rightarrow0}\frac{\arcsin(x)}{x}=1 $ 
+$ \displaystyle \lim_{x\rightarrow0}\frac{\arctan(x)}{x}=1 $ 
 
-\end{tabular}
+\end{tabularx}
 
 \subsubsection{Logarithmic and exponential functions}
 \begin{tabularx}{\textwidth}{ X X }
 	
 $ \displaystyle \lim_{x\rightarrow0}\frac{\ln(x+a)}{x}=a $ &
-$ \displaystyle \lim_{x\rightarrow0}\frac{\log_a(x+1)}{x}=\frac{1}{\ln(a)} ~~ (a>0) $ \\ [2ex]
+$ \displaystyle \lim_{x\rightarrow0}\frac{\log_a(x+1)}{x}=\frac{1}{\ln(a)} ~~~ (a>0) $ \\ [2ex]
 
 $ \displaystyle \lim_{x\rightarrow+\infty}x^\alpha= \begin{cases}
 +\infty & a>0 \\
@@ -104,14 +105,13 @@ $ \displaystyle \lim_{x\rightarrow 0^+}\log_ax= \begin{cases}
 $ \displaystyle\lim_{x\rightarrow0}\frac{a^x-1}{x}=ln(a) ~~ \forall a>0 $ &
  $ \displaystyle \lim_{x\rightarrow0}\frac{e^x-1}{x}=1 $ \\[2ex]
 
-$ \displaystyle
-\lim_{x\rightarrow+\infty}\frac{x^\alpha}{e^x}=0 $ &
+$ \displaystyle \lim_{x\rightarrow+\infty}\frac{x^\alpha}{a^x}=0  ~~~~ a>1 $ &
 $ \displaystyle \lim_{x\rightarrow-\infty}\frac{e^x}{\left|x\right|^\alpha}=0 ~~~~ a>1 $ \\ [2ex]
 
-$ \displaystyle
-\lim_{x\rightarrow+\infty}\frac{\ln(x)}{x^\alpha}=0 $ &
+$ \displaystyle \lim_{x\rightarrow+\infty}\frac{\ln(x)}{x^\alpha}=0 $ &
 $ \displaystyle \lim_{x\rightarrow 0^+}\ln(x)x^\alpha=0 ~~~~ a>0 $ \\ [2ex]
 
+$ \displaystyle \lim_{x\rightarrow+\infty}\frac{\ln(x)}{a^x}=0 ~~~ a>1$ \\ [2ex]
 
 $ \displaystyle \lim_{x\rightarrow+\infty}\left(1+\frac{1}{x}\right)^x=e $ & 
 $ \displaystyle \lim_{x\rightarrow+\infty}\left(1-\frac{1}{x}\right)^x=\frac{1}{e} $ \\ [2ex]
