Add hyperbolic functions

--- a/Mathematics_Formulary/sections/arithmetic.tex
+++ b/Mathematics_Formulary/sections/arithmetic.tex
@@ -50,3 +50,13 @@ $ \displaystyle \log_a(x/y) = \log_a(x)-\log_a(y) \ \forall x,y>0 $
 \end{tabular}
 
 
+\section{Hyperbolic functions}
+The hyperbolic functions are defined by:
+\[
+\sinh(x)=\frac{{\rm e}^x-{\rm e}^{-x}}{2}~~~,~~~\cosh(x)=\frac{{\rm e}^x+{\rm e}^{-x}}{2}~~~,~~~\tanh(x)=\frac{\sinh(x)}{\cosh(x)}
+\]
+From this follows that $\cosh^2(x)-\sinh^2(x)=1$. Further holds:
+\[
+{\rm arsinh}(x)=\ln|x+\sqrt{x^2+1}|~~~,~~~{\rm arcosh}(x)={\rm arsinh}(\sqrt{x^2-1})
+\]
+
