--- a/Mathematics_Formulary/sections/linear_algebra.tex
+++ b/Mathematics_Formulary/sections/linear_algebra.tex
@@ -639,7 +639,7 @@ a hyperbole $|A|<0$. In polar coordinates this can be written as:
 \[
 r=\frac{ep}{1-e\cos(\theta)}
 \]
-An ellipse has $e<1$, a parabola $e=1$ and a hyperbola $e>1$.
+An ellipse has $e<1$, a parabola $e=1$ and a hyperbole $e>1$.
 
 \subsection{Quadratic surfaces in $ \mathbb{R}^3$}
 Rank 3:
